text wrap fix

--- a/scss/blocks/_text-block.scss
+++ b/scss/blocks/_text-block.scss
@@ -69,7 +69,6 @@
       margin-bottom: 70px;
       font-size: $titleSizeH1;
       letter-spacing: -0.04em;
-      white-space: nowrap;
 
       @media (max-width: 1400px) {
         font-size: $titleSizeH1*0.85;
